[project]
name = "sass-growth-crew"
version = "0.1.0"
description = "Find leads in Essex County to grow the Sassafras Garden Design business"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=1.9.3",
    "google-genai>=1.61.0",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.2.0",
]
[project.scripts]
run_crew = "sass_growth_crew.main:run"